--- a/i ndex.html
+++ b/i ndex.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <nav>
-        <li>
-            <ol> 
-            <HOME>
-            </ol>
-            <ol> 
-            <Blog>
-            </ol>
-            <ol> 
-            </HOME>
-            </ol>
-            <ol> 
-            </HOME>
-            </ol>
-        </li>
-    </nav>
-</body>
-</html>
+   
+ </head>
+ <body >
+      <script src="index.js"></script>
+ </body>
+ </html>
